# CRYPTOTEHNOLOG

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Cargo.toml  Dockerfile  Makefile  PHASE_0_COMPLETION.md  PROJECT_REVIEW.md  P_1.md  R1.md  R2.md  R3.md  README.md  TESTING.md  bandit-report.json  check_dbs.py  coverage.json  coverage.xml  create_events.py  docker-compose-infisical.yml  docker-compose.yml  env.example  minimal_test.py  pyproject.toml  pyrightconfig.json  requirements-prod.txt  requirements.txt  ruff_errors.txt  simple_test.py  temp_old.rs  test_enhanced_event_bus.py  test_fault_tolerance.py  test_import.py
backup_before_phase2_20260228_130720/: circuit_breaker.py  database.py  event_bus.py  tests  watchdog.py
backup_before_system_controller/: state_transition.py
backups/backup_2026-03-03_01-30-26/crates/common/: Cargo.toml
backups/backup_2026-03-03_01-30-26/crates/common/src/: error.rs  lib.rs
backups/backup_2026-03-03_01-30-26/crates/execution-core/: Cargo.toml
backups/backup_2026-03-03_01-30-26/crates/execution-core/src/: execution.rs
backups/backup_2026-03-03_01-30-26/crates/execution-core/tests/: property_order_matching.proptest-regressions  property_risk_calculation.rs
config/: infisical_secrets.yaml  instruments.toml  phase_gate.toml  risk.toml  strategies.toml  venues.toml
crates/eventbus/: Cargo.toml
crates/eventbus/benches/: enhanced_eventbus_bench.rs  event_bench.rs
crates/eventbus/src/: backpressure.rs  bus.rs  event.rs  lib.rs  persistence.rs  priority.rs  priority_queue.rs  rate_limiter.rs  ring_buffer.rs
crates/eventbus/tests/: test_persistence.rs  test_priority.rs  test_rate_limiter.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: lib.rs
crates/risk-ledger/: Cargo.toml
crates/risk-ledger/benches/: ledger_bench.rs  merkle_bench.rs
crates/risk-ledger/src/: ledger.rs  lib.rs  merkle.rs  risk.rs  validation.rs
crates/risk-ledger/tests/: property_merkle.proptest-regressions  property_merkle.rs  property_validation.rs
dashboard-frontend/: Dockerfile.dashboard-frontend  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.js  vite.config.ts
docs/: E2E_TESTS_KNOWN_ISSUES.md  INFISICAL_SETUP.md  INFISICAL_STEP_BY_STEP.md  PYTHON_RUST_INTEROP_GUIDE.md  terminal_connectors_troubleshooting.md
fixtures/: manifest.toml
knowledge/: README.md  graph.md  index.md  log.md  schema.md
logs_58134962150/: 0_CI Summary.txt  1_Security Scan.txt  2_Docker Build Test.txt  3_Python Tests (3.12).txt  4_Rust Tests.txt  5_Dependency Vulnerability Check.txt  6_Code Quality.txt
logs_58135515646/: 0_CI Summary.txt  1_Rust Tests.txt  2_Code Quality.txt  3_Docker Build Test.txt  4_Python Tests (3.12).txt  5_Security Scan.txt  6_Dependency Vulnerability Check.txt
logs_58137486473/: 0_CI Summary.txt  1_Code Quality.txt  2_Security Scan.txt  3_Docker Build Test.txt  4_Rust Tests.txt  5_Dependency Vulnerability Check.txt  6_Python Tests (3.12).txt
logs_58137842285/: 0_CI Summary.txt  1_Dependency Vulnerability Check.txt  2_Docker Build Test.txt  3_Security Scan.txt  4_Python Tests (3.12).txt  5_Rust Tests.txt  6_Code Quality.txt
logs_58138480383/: 0_CI Summary.txt  1_Code Quality.txt  2_Python Tests (3.12).txt  3_Rust Tests.txt  4_Docker Build Test.txt  5_Security Scan.txt  6_Dependency Vulnerability Check.txt
logs_58139106395/: 0_CI Summary.txt  1_Rust Tests.txt  2_Python Tests (3.12).txt  3_Docker Build Test.txt  4_Security Scan.txt  5_Dependency Vulnerability Check.txt  6_Code Quality.txt
logs_58139330297/: 0_CI Summary.txt  1_Security Scan.txt  2_Code Quality.txt  3_Docker Build Test.txt  4_Dependency Vulnerability Check.txt  5_Rust Tests.txt  6_Python Tests (3.12).txt
logs_58181392833/: 0_CI Summary.txt  1_Code Quality.txt  2_Docker Build Test.txt  3_Dependency Vulnerability Check.txt  4_Python Tests (3.12).txt  5_Security Scan.txt  6_Rust Tests.txt
logs_58182927695/: 0_CI Summary.txt  1_Security Scan.txt  2_Docker Build Test.txt  3_Rust Tests.txt  4_Python Tests (3.12).txt  5_Dependency Vulnerability Check.txt  6_Code Quality.txt
migrations/: 0001_event_journal.sql
prompts/: 00_ОГЛАВЛЕНИЕ_И_ВВЕДЕНИЕ.md  01_ФАЗА_0_ПОДГОТОВКА_СРЕДЫ.md  02_ФАЗА_1_ЯДРО_ИНФРАСТРУКТУРЫ_PROMPT.md  03_ФАЗА_2_CONTROL_PLANE_PROMPT.md  04_ФАЗА_3_EVENT_BUS_PROMPT.md  06_ФАЗА_5_RISK_ENGINE_PROMPT.md  07_ФАЗА_6_MARKET_DATA_PROMPT.md  08_ФАЗА_7_INDICATORS_PROMPT.md  09_ФАЗА_8_SIGNAL_GENERATOR_PROMPT.md  10_ФАЗА_9_PORTFOLIO_GOVERNOR_PROMPT.md  14_ФАЗА_13_NOTIFICATIONS_PROMPT.md  16_ФАЗА_15_PERFORMANCE_ANALYTICS_PROMPT.md  17_ФАЗА_16_BACKTESTING_PROMPT.md  18_ФАЗА_17_PAPER_TRADING_PROMPT.md  21_ФАЗА_20_ADVANCED_EXECUTION_PROMPT.md  22_ФАЗА_21_ML_RISK_MODELS_PROMPT.md  README.md  План Разработки Панели Управления CRYPTOTEHNOLOG.md
rust_components/: Cargo.toml  README.md  RUST_VERSION.md  pyproject.toml
rust_components/crates/audit-chain/: Cargo.toml
rust_components/crates/audit-chain/src/: audit.rs  lib.rs
rust_components/crates/common/: Cargo.toml
rust_components/crates/common/src/: utils.rs
rust_components/crates/eventbus/: Cargo.toml  build.rs  build_error.txt  test_error.txt
rust_components/crates/eventbus/benches/: event_bench.rs  eventbus_backend_bench.rs  ring_buffer_bench.rs
rust_components/crates/eventbus/src/: bus.rs  lib.rs
rust_components/crates/execution-core/: Cargo.toml
rust_components/crates/execution-core/src/: execution.rs  lib.rs
rust_components/crates/ffi/: Cargo.toml
rust_components/crates/ffi/src/: lib.rs
rust_components/crates/risk-ledger/: Cargo.toml
rust_components/crates/risk-ledger/benches/: ledger_bench.rs  merkle_bench.rs  validation_bench.rs  wal_bench.rs
rust_components/crates/risk-ledger/src/: ledger.rs  lib.rs  merkle.rs  validation.rs  wal.rs
rust_components/src/: error.rs  event.rs  lib.rs  utils.rs
scripts/: check_all.ps1  check_compliance.ps1  check_env.ps1  check_fixture_paths.ps1  check_golden_fixture_current.ps1  check_phase_gate.ps1  (+34 more)
(+3460 files in other folders)
