# ==================== CRYPTOTEHNOLOG Python Project Configuration ====================

[build-system]
requires = ["setuptools>=79.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptotechnolog"
version = "1.3.0"
description = "Institutional-Grade Crypto Trading Platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "Proprietary - All Rights Reserved"}
authors = [
    {name = "CRYPTOTEHNOLOG Team"}
]
keywords = ["trading", "crypto", "algorithmic", "institutional", "risk-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: Other/Proprietary",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # Core
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",

    # Async & Web
    "aiohttp>=3.9.0,<4.0.0",
    "httpx>=0.27.0,<1.0.0",
    "aiogram>=3.4.0,<4.0.0",
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "websockets>=12.0,<14.0",

    # Exchange APIs
    "ccxt>=4.5.0,<5.0.0",

    # Data & Analysis
    "pandas>=2.2.0,<2.3.0",
    "polars>=0.20.0,<1.0.0",
    "pyarrow>=12.0.0,<20.0.0",
    "numpy>=1.26.0,<2.1.0",
    "scipy>=1.11.0,<1.15.0",
    "pytz>=2023.0",
    "python-dateutil>=2.8.0",

    # Databases
    "redis>=5.0.0,<6.0.0",
    "asyncpg>=0.31.0,<0.32.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "timescaledb>=0.0.4,<0.1.0",

    # Secrets Management
    "hvac>=2.0.0,<3.0.0",  # HashiCorp Vault
    "python-gnupg>=0.5.0,<1.0.0",  # GPG signing
    "watchdog>=4.0.0,<5.0.0",  # File monitoring

    # Logging & Observability
    "structlog>=23.0.0,<25.0.0",
    "prometheus-client>=0.19.0,<1.0.0",

    # Utilities
    "cryptography>=44.0.1,<45.0.0",
    "pyjwt>=2.8.0,<3.0.0",
    "aiofiles>=23.0.0,<25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "pytest-xdist>=3.5.0,<4.0.0",
    "pytest-rerunfailures>=14.0,<15.0",
    "hypothesis>=6.100.0,<7.0.0",
    "black>=23.12.0,<27.0.0",
    "mypy>=1.7.0,<2.0.0",
    "ruff>=0.1.0,<1.0.0",
    "pre-commit>=3.6.0,<4.0.0",
    "ipython>=8.19.0,<9.0.0",
    "ipdb>=0.13.0,<1.0.0",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocstrings[python]>=0.26.2",
]

# rust = [
#     "cryptotechnolog-rust @ file:///${PROJECT_ROOT}/rust_components",
# ]
# TODO: Раскомментировать после создания rust_components (Фаза 3)

[project.urls]
Homepage = "https://github.com/your-org/cryptotechnolog"
Documentation = "https://cryptotechnolog.readthedocs.io"
Repository = "https://github.com/your-org/cryptotechnolog"
Issues = "https://github.com/your-org/cryptotechnolog/issues"

# ==================== Tool Configurations ====================

[tool.setuptools.packages.find]
where = ["src"]
include = ["cryptotechnolog*"]

[tool.setuptools.package-data]
cryptotechnolog = ["py.typed", "**/*.pyi"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.tox
  | build
  | dist
  | venv
  | env
  | ENV
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
target-version = "py312"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "env",
]

[tool.ruff.lint]
# Enable all rules by default, then disable specific ones
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # Pylint
    "RUF", # Ruff-specific rules
]

ignore = [
    "E501",  # Line too long (handled by black)
    "B008",  # Do not perform function calls in argument defaults
    "C901",  # Too complex
    "PLR0913",  # Too many arguments
    "ARG001",  # Unused function argument
    "ARG002",  # Unused method argument
    "RUF001",  # Ambiguous unicode character (cyrillic letters in strings)
    "RUF002",  # Ambiguous unicode character (cyrillic)
    "RUF003",  # Ambiguous unicode character in comments (cyrillic)
    "C901",  # Too complex
]

[tool.ruff.lint.isort]
known-first-party = ["cryptotechnolog"]
known-third-party = ["pandas", "polars", "pytest"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["ARG", "PLR2004"]  # Allow unused arguments in tests
"**/*.pyi" = ["F401", "I001"]  # Allow unused imports and unsorted imports in type stubs (TYPE_CHECKING blocks)
"src/core/redis_manager.py" = ["UP035"]  # Allow set[str] with quotes for mypy compatibility
"src/cryptotechnolog/config/manager.py" = ["TC001"]  # DI паттерн: Protocol нужны для типизации зависимостей, не для наследования

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true
explicit_package_bases = true
exclude = ["tests/", ".venv/", "build/", "dist/"]

[[tool.mypy.overrides]]
module = [
    "ccxt.*",
    "hvac.*",
    "timescaledb.*",
    "redis.*",
    "pandas.*",
    "pandas._libs.tslibs.timedeltas",
    "pandas._libs.tslibs.nattype",
    "pandas._libs.tslibs.np_datetime",
    "asyncpg.*",
    "numpy.*",
    "polars.*",
    "scipy.*",
    "cryptotechnolog_rust.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "tests/*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--asyncio-mode=auto",
    "--tb=short",
    # NOTE: Coverage is disabled by default for faster test runs.
    # To enable coverage, run: pytest --cov=src --cov-report=xml
    # NOTE: xdist is disabled by default for unit tests to avoid overhead.
    # To enable parallel execution, run: pytest -n auto --dist loadscope
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "slowest: Very slow running tests",
    "benchmark: Performance benchmarks",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
parallel = true
omit = [
    "tests/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests", "venv", "env"]
skips = ["B101", "B601"]

