[project]
name = "cryptotehnolog"
version = "0.1.0"
description = "Research and deterministic trading infrastructure for probability basis strategies."
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

