# ==================== CRYPTOTEHNOLOG Rust Workspace ====================
# Cargo workspace for high-performance trading platform components

[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/eventbus",
    "crates/risk-ledger",
    "crates/audit-chain",
    "crates/execution-core",
    "crates/ffi",
]

# Workspace-level dependencies (shared across all crates)
[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Random number generation (limit version for compatibility with older Cargo)
getrandom = { version = "0.2", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Redis (for event bus)
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# ZeroMQ (alternative event bus)
zmq = "0.10"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Metrics
prometheus = "0.13"

# Python bindings (PyO3) - Python 3.14 support
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }

# Testing
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"

# Profiling
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

# Lock-free data structures
crossbeam = "0.8"
arrayvec = "0.7"

# Workspace members can reference these as just "tokio", "serde", etc.
