# ==================== CRYPTOTEHNOLOG Event Bus Crate ====================
# High-performance event bus for inter-component communication

[package]
name = "cryptotechnolog-eventbus"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
authors = ["CRYPTOTEHNOLOG Team"]
license = "Proprietary - All Rights Reserved"
description = "High-performance event bus for CRYPTOTEHNOLOG"
repository = "https://github.com/your-org/cryptotechnolog"

[features]
default = []
lock-free = ["crossbeam", "arrayvec"]

[dependencies]
# Use workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
redis = { workspace = true }
zmq = { workspace = true }

# Crossbeam channel for broadcast support
crossbeam-channel = "0.5"

# Lock-free data structures (optional)
crossbeam = { workspace = true, optional = true }
arrayvec = { workspace = true, optional = true }

# Parking lot for faster mutex (production use)
parking_lot = "0.12"

# Local dependencies
cryptotechnolog-common = { path = "../common" }

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "event_bench"
harness = false

[[bench]]
name = "ring_buffer_bench"
harness = false
required-features = ["lock-free"]

[[bench]]
name = "eventbus_backend_bench"
harness = false
required-features = ["lock-free"]

[[bench]]
name = "enhanced_eventbus_bench"
harness = false
