# ==================== CRYPTOTEHNOLOG FFI Crate ====================
# Python bindings using PyO3 for high-performance interop

[package]
name = "cryptotechnolog-ffi"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
authors = ["CRYPTOTEHNOLOG Team"]
license = "Proprietary - All Rights Reserved"
description = "Python bindings for CRYPTOTEHNOLOG using PyO3"
repository = "https://github.com/your-org/cryptotechnolog"

[lib]
name = "cryptotechnolog_rust"
crate-type = ["cdylib", "rlib"]

[features]
default = ["jemalloc"]
jemalloc = ["dep:jemallocator"]

[dependencies]
# Use workspace dependencies
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Local dependencies
cryptotechnolog-common = { path = "../common" }
cryptotechnolog-risk-ledger = { path = "../risk-ledger" }
cryptotechnolog-execution-core = { path = "../execution-core" }
cryptotechnolog-eventbus = { path = "../eventbus" }

# Channel for receiver
crossbeam-channel = "0.5"

# UUID for correlation IDs
uuid = { workspace = true }

# Memory allocator (jemalloc for Linux/Mac, system allocator for Windows)
[target.'cfg(not(windows))'.dependencies]
jemallocator = { version = "0.5", features = ["unprefixed_malloc_on_supported_platforms"], optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }
