[package]
name = "cryptotehnolog-ingestion"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
cryptotehnolog-common = { path = "../common" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"], optional = true }

[features]
default = []
network-integration = ["dep:reqwest"]
