# ==================== CRYPTOTEHNOLOG Risk Ledger Crate ====================
# High-performance risk calculations and position tracking

[package]
name = "cryptotechnolog-risk-ledger"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
authors = ["CRYPTOTEHNOLOG Team"]
license = "Proprietary - All Rights Reserved"
description = "Risk ledger and calculations for CRYPTOTEHNOLOG"
repository = "https://github.com/your-org/cryptotechnolog"

[package.metadata.docs.rs]
# Explicitly specify workspace root for docs.rs
rustdoc-args = ["--document-private-items"]

[package.metadata.cargo-udeps.ignore]
# Ensure local path dependencies are not considered unused
normal = ["cryptotechnolog-audit-chain", "cryptotechnolog-common"]

[lib]
name = "cryptotechnolog_risk_ledger"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
# Use workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Cryptographic dependencies for Merkle tree
sha2 = "0.10"
hex = "0.4"

# Local dependencies - workspace members (available on all platforms)
cryptotechnolog-common = { path = "../common" }
cryptotechnolog-audit-chain = { path = "../audit-chain" }

# Windows-specific dependencies for file sharing
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt"] }

[target.'cfg(not(windows))'.dependencies]
# Linux-specific dependencies (if any)


[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }

# Benchmark configuration
[[bench]]
name = "wal_bench"
harness = false

[[bench]]
name = "merkle_bench"
harness = false

[[bench]]
name = "validation_bench"
harness = false

[[bench]]
name = "ledger_bench"
harness = false
