# ==================== CRYPTOTEHNOLOG Event Bus Crate ====================
# High-performance event bus for inter-component communication

[package]
name = "cryptotechnolog-eventbus"
version = "0.1.0"
edition = "2021"
authors = ["CRYPTOTEHNOLOG Team"]
license = "Proprietary - All Rights Reserved"
description = "High-performance event bus for CRYPTOTEHNOLOG"
repository = "https://github.com/your-org/cryptotechnolog"

[features]
default = []
lock-free = ["crossbeam", "arrayvec"]

[dependencies]
# Use workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
redis = { workspace = true }
zmq = { workspace = true }

# Lock-free data structures (optional)
crossbeam = { workspace = true, optional = true }
arrayvec = { workspace = true, optional = true }

# Local dependencies
cryptotechnolog-common = { path = "../common" }

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "event_bench"
harness = false

[[bench]]
name = "ring_buffer_bench"
harness = false
required-features = ["lock-free"]
