# ==================== CRYPTOTEHNOLOG FFI Crate ====================
# Python bindings using PyO3 for high-performance interop

[package]
name = "cryptotechnolog-ffi"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
authors = ["CRYPTOTEHNOLOG Team"]
license = "Proprietary - All Rights Reserved"
description = "Python bindings for CRYPTOTEHNOLOG using PyO3"
repository = "https://github.com/your-org/cryptotechnolog"

[lib]
name = "cryptotechnolog_rust"
crate-type = ["cdylib"]

[features]
default = ["jemalloc"]
jemalloc = ["dep:jemallocator"]

[dependencies]
# Use workspace dependencies
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Memory allocator (jemalloc for Linux/Mac, system allocator for Windows)
[target.'cfg(not(windows))'.dependencies]
jemallocator = { version = "0.5", features = ["unprefixed_malloc_on_supported_platforms"], optional = true }

# Local dependencies
cryptotechnolog-common = { workspace = true }
cryptotechnolog-risk-ledger = { workspace = true }
cryptotechnolog-execution-core = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }
