# ==================== CRYPTOTEHNOLOG Risk Ledger Crate ====================
# High-performance risk calculations and position tracking

[package]
name = "cryptotechnolog-risk-ledger"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
authors = ["CRYPTOTEHNOLOG Team"]
license = "Proprietary - All Rights Reserved"
description = "Risk ledger and calculations for CRYPTOTEHNOLOG"
repository = "https://github.com/your-org/cryptotechnolog"

[dependencies]
# Use workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Cryptographic dependencies for Merkle tree
sha2 = "0.10"
hex = "0.4"

# Windows-specific dependencies for file sharing
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt"] }

# Local dependencies
cryptotechnolog-common = { path = "../common" }

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }

# Benchmark configuration
[[bench]]
name = "wal_bench"
harness = false

[[bench]]
name = "merkle_bench"
harness = false

[[bench]]
name = "validation_bench"
harness = false

[[bench]]
name = "ledger_bench"
harness = false
